# hellmut

./: Cargo.toml
crates/hell_collections/: Cargo.toml
crates/hell_collections/src/: dyn_arrya.rs  lib.rs
crates/hell_db/: Cargo.toml
crates/hell_db/src/surreal/: hell_db.rs  hell_db_response.rs  hell_tx.rs
crates/hell_error/: Cargo.toml
crates/hell_error/src/: error.rs  lib.rs
crates/hell_ws/: Cargo.toml
crates/hell_ws/src/: lib.rs
crates/hell_ws/src/hell_actix/: hell_ws.rs  mod.rs
crates/hell_ws/src/hell_tungs/: mod.rs  ws_client.rs  ws_server.rs
lib/hell_collections/src/: dyn_arrya.rs
lib/hell_core/: Cargo.toml
lib/hell_core/src/: error.rs
lib/hell_error/: Cargo.toml
lib/hell_error/src/: error.rs
lib/hell_mod_llm/: Cargo.toml
lib/hell_mod_llm/src/llm/: chat.rs  role.rs
lib/hell_mod_llm/src/openai/: api.rs  chat.rs  mod.rs
lib/hell_mod_openai/: Cargo.toml
lib/hell_mod_openai/src/: auth.rs  chat.rs  context.rs  lib.rs  model.rs
lib/hell_mod_web_client/: Cargo.toml
lib/hell_mod_web_client/src/: fetch.rs  lib.rs
lib/hell_mod_web_client/src/view/: context.rs  element.rs  event.rs  mod.rs  style.rs
lib/hell_mod_web_client/src/view/ident/: hell_style.rs
lib/hell_mod_web_client/src/view/style/: hell.rs  mod.rs
lib/hell_mod_web_client/styles/: hell.css
lib/hell_util_web/src/view/: element.rs
lib/hell_utils_web/: Cargo.toml
lib/hell_utils_web/src/: logging.rs
lib/hell_utils_web/src/view/: context.rs  element.rs  event.rs  presenter.rs
lib/hell_web/: Cargo.toml
lib/hell_web/src/: error.rs
lib/hell_web/src/view/: context.rs  element.rs  event.rs  mod.rs  presenter.rs
todo/: Cargo.toml
todo/hell_db/: Cargo.toml
todo/hell_db/src/surreal/: hell_db.rs  hell_db_response.rs  hell_tx.rs  mod.rs
todo/hell_store/: Cargo.toml
todo/hell_store/src/: store.rs
todo/hell_ws/: Cargo.toml
todo/hell_ws/src/: lib.rs
todo/hell_ws/src/native/: mod.rs  ws_client.rs  ws_server.rs
todo/hell_ws/src/web/: mod.rs  ws_web_client.rs
tools/: build.sh
