[workspace]

members = [ "lib/*" ]



[workspace.package]
version = "0.1.0"
edition = "2021"
authors = [ "lucas muller <muller.lucas@mailbox.org>" ]



[workspace.dependencies]
# hellmut
# -------
hell_core      = { path = "lib/hell_core" }
hell_utils_web = { path = "lib/hell_utils" }

# external
# --------
# macros
paste = "1.0.12"

# web
wasm-bindgen = "0.2.84"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.61"

[workspace.dependencies.web-sys]
version = "0.3.61"
features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlButtonElement",
    "Node",
    "Window",
    "DomTokenList", # class-list
]
