[workspace]

members = [ "lib/*" ]



[workspace.package]
version = "0.1.0"
edition = "2021"
authors = [ "lucas muller <muller.lucas@mailbox.org>" ]



[workspace.dependencies]
# hellmut
# -------
hell_core        = { path = "lib/hell_core" }
hell_mod_web     = { path = "lib/hell_mod_web_client" }
hell_mod_llm     = { path = "lib/hell_mod_llm" }

# external
# --------
async-trait              = "0.1.68"
axum                     = "0.6.16"
console_error_panic_hook = "0.1.7"
dotenv                   = "0.15.0"
paste                    = "1.0.12"
serde                    = { version = "1.0.160", features = ["derive"] }
serde_json               = "1.0.96"
wasm-bindgen             = "0.2.84"
js-sys                   = "0.3.61"
reqwest                  = { version = "0.11", features = ["json"] }
# tokio                    = { version = "1.27.0", features = ["full"] }
# tracing            = "0.1.37"
# tracing-subscriber = "0.3.16"

[workspace.dependencies.web-sys]
version = "0.3.61"
features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlButtonElement",
    "HtmlInputElement",
    "Node",
    "Window",
    "DomTokenList", # class-list
]

