[package]
name = "hell_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# internal
hell_error = { path = "../hell_error" }
# external
surrealdb = "1.0.0-beta.8"


serde = { version = "1.0.86", features = ["derive"]}
serde_json = "1.0.86"
