[package]
name = "hell_db"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# internal
hell_error = { path = "../hell_error" }
# external
surrealdb.workspace = true
serde.workspace = true
serde_json.workspace = true
