[package]
name = "hell_ws"
version.workspace = true
edition.workspace = true



[features]
# todo remove default feature
default    = ["hell_tungs"]
hell_actix = ["actix", "actix-web", "actix-web-actors"]
hell_tungs = ["futures", "futures-channel", "tokio", "tokio-tungstenite"]



[dependencies]
hell_error = { path = "../hell_error" }

actix            = { workspace = true, optional = true }
actix-web        = { workspace = true, optional = true }
actix-web-actors = { workspace = true, optional = true }

futures           = { workspace = true, optional = true }
# futures-util      = { workspace = true, optional = true }
futures-channel   = { workspace = true, optional = true }

tokio             = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }
