[package]
name = "hell_mod_web_client"
authors.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
# hellmut
hell_core.workspace = true
# extern
wasm-bindgen.workspace = true
console_error_panic_hook.workspace = true
web-sys.workspace = true
js-sys.workspace = true
paste.workspace = true
