[package]
name = "hell_web"
version.workspace = true
edition.workspace = true
authors.workspace = true


[dependencies]
# hust
hell_error.workspace = true

# extern
wasm-bindgen.workspace = true
console_error_panic_hook.workspace = true

[dependencies.web-sys]
version = "0.3.61"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]
