[package]
name = "hell_web"
version.workspace = true
edition.workspace = true
authors.workspace = true


[dependencies]
# hust
hell_error.workspace = true

# extern
wasm-bindgen.workspace = true
console_error_panic_hook.workspace = true
web-sys.workspace = true
js-sys.workspace = true
paste.workspace = true
